Archive2/99/a16549b4c21738/output
main.cpp: In constructor 'B::B()':
main.cpp:11:12: error: use of deleted function 'A::~A()'
         B(){ };
            ^
main.cpp:6:9: note: declared here
         ~A() = delete; //{ std::cout << "~A::A()" << std::endl; };
         ^
